# txtox

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 02_visp_explore.ipynb  03_mlp_predictions.ipynb  04_neighborhood_data_v0.ipynb  05_mlp_predictions_nhood_v0.ipynb  06_prep_spatial_data.ipynb  07_gnn_predictions.ipynb  08_uncertainty_module.ipynb  09_uncertainty_2d.ipynb  11_one_section_hemi_dataset.ipynb  13_cluster_2d_hemi.ipynb  14_landmarks.ipynb  15_asymmetric_laplace.ipynb  16_gal.ipynb  17_full_hemi_dataset.ipynb  18c_msl_exp_to_pkl.py  18d_gauss_exp_to_pkl.py  21_3section_dataprep.ipynb  21_mnist_dataprep.ipynb  22a_mnist_msl.ipynb  22b_mnist_gauss.ipynb  22c_msl_exp_to_pkl.py  22d_gauss_exp_to_pkl.py
txtox/: utils.py
txtox/data/: datamodules.py  datasets.py
txtox/models/: fusemap_gnn.py  gnn.py  gnn_het_reg.py  gnn_het_reg_2d.py  gnn_het_reg_2d_fix.py  gnn_het_reg_2d_fix_pyg.py  gnn_het_reg_2d_fix_pyg_3sec.py  gnn_het_reg_2d_fix_pyg_wb.py  gnn_het_reg_2d_gal.py  gnn_het_reg_2d_gal_pyg.py  gnn_het_reg_2d_gauss_mnist.py  gnn_het_reg_2d_msl.py  gnn_het_reg_2d_msl_mnist.py  gnn_tx_gauss.py  gnn_tx_msl.py  neighborstats.py  simple.py
txtox/trainers/: gnn.py  gnn_het_reg.py  gnn_het_reg_2d.py  gnn_het_reg_2d_fix.py  gnn_het_reg_2d_fix_pyg.py  gnn_het_reg_2d_fix_pyg_3sec.py  gnn_het_reg_2d_fix_pyg_wb.py  gnn_het_reg_2d_gal.py  gnn_het_reg_2d_gal_pyg.py  gnn_het_reg_2d_gauss_mnist.py  gnn_het_reg_2d_msl.py  gnn_het_reg_2d_msl_mnist.py  gnn_tx_gauss.py  gnn_tx_msl.py  neighborhood_v0.py  trainers.py
